--- a/README.Rmd
+++ b/README.Rmd
@@ -40,21 +40,20 @@ Project uses `{targets}`and `{renv}` and `{here}`.
 `reports\`: output files
 
 
-Fixed CASRN in masterfile due to value type:
+## Reports
 
 
+Master list_waterpipe chemical database (for the EX program and waterpipe fillers only)_2025.xlsx = A  = main_dat =  `main_wp_clean.xlsx`
 
-Vanilleextrakt ?????
+New List EX-clean version.xlsx = B = ex_cid_chem =  `ex_cid_chem.xlsx`
 
+solution = ex_dat - main_dat = 33 = `outer_to_check.xlsx`
 
-Separated CASRN with multiple CASRN or Unknown.
+orange_plus = solution + orange = `orange_plux.xlsx`
 
-Some had 2 CASRN in a single cell.
-2 Unknown removed
-? removed
-empty removed
-
-
+We want:
+chem_to_eval = Orange_plus – main_dat  (pretty much we check the one that are not in main_dat)
+Actually after discussion, this will just be a double check.
 
 
 # Howto
